[gd_scene load_steps=19 format=3 uid="uid://xqckunj3gk4p"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_0fhkd"]
[ext_resource type="Texture2D" uid="uid://drlu7rghl0wr8" path="res://Cowboy with a Wand/cowboizardidle-Sheet.png" id="2_j5dup"]
[ext_resource type="Texture2D" uid="uid://8k3f7ybku71q" path="res://Cowboy with a Wand/cowboizardwalk-Sheet.png" id="3_6fpi4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rn4u"]
radius = 15.0
height = 118.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ojl"]
atlas = ExtResource("2_j5dup")
region = Rect2(0, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t31o"]
atlas = ExtResource("2_j5dup")
region = Rect2(124, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_u48ls"]
atlas = ExtResource("2_j5dup")
region = Rect2(248, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34rk"]
atlas = ExtResource("2_j5dup")
region = Rect2(372, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dxdu"]
atlas = ExtResource("2_j5dup")
region = Rect2(496, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_11luw"]
atlas = ExtResource("2_j5dup")
region = Rect2(620, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_rud8k"]
atlas = ExtResource("2_j5dup")
region = Rect2(744, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4fiy"]
atlas = ExtResource("2_j5dup")
region = Rect2(868, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_318b5"]
atlas = ExtResource("3_6fpi4")
region = Rect2(0, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_w84la"]
atlas = ExtResource("3_6fpi4")
region = Rect2(124, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3lwu"]
atlas = ExtResource("3_6fpi4")
region = Rect2(248, 0, 124, 124)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxnuh"]
atlas = ExtResource("3_6fpi4")
region = Rect2(372, 0, 124, 124)

[sub_resource type="SpriteFrames" id="SpriteFrames_foyrw"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ojl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t31o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u48ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dxdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11luw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rud8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4fiy")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_318b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w84la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3lwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxnuh")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vfks"]
size = Vector2(46, 124)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0fhkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(549, 280)
shape = SubResource("CapsuleShape2D_5rn4u")

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(550, 279)
sprite_frames = SubResource("SpriteFrames_foyrw")
animation = &"Idle"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(547, 286)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(550, 278)
shape = SubResource("RectangleShape2D_1vfks")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.949

[node name="Health" type="ProgressBar" parent="."]
modulate = Color(0.721569, 0.0352941, 0.0196078, 1)
self_modulate = Color(0.720836, 0.035057, 0.019433, 1)
offset_left = 56.0
offset_top = 544.0
offset_right = 368.0
offset_bottom = 596.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
